SERVER-6693 fix multiline list input in mongo shell